<resources>
    <string name="app_name">My Playground</string>
    <string name="buttonBuzzfeed">Buzzfeed</string>
    <string name="viewWebViewer">Welcome!</string>
    <string name="imageCinna">cinna</string>
    <string name="contactButton">contact</string>
    <string name="checkbox">Check here</string>
    <string name="togglehere">toggle here</string>
    <string name="emailHere">email</string>
</resources>
