<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ucsdextension.myplayground.MainActivity">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/viewWebViewer"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        tools:text="Welcome!" />

    <ImageView
        android:id="@+id/cinnaPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageCinna"
        android:paddingLeft="200dp"
        android:paddingRight="15dp"
        app:srcCompat="@mipmap/cinna_round" />

    <LinearLayout
        android:id="@+id/webViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="90dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/buttonBuzzfeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonBuzzfeed"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="99dp"
                    tools:text="Buzzfeed" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    style="@style/AlertDialog.AppCompat.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton"
                    android:textColor="@android:color/holo_blue_light"
                    android:textColorLink="@android:color/holo_orange_dark"
                    android:textOff="@android:string/cancel"
                    android:textOn="@android:string/ok"
                    tools:layout_editor_absoluteY="511dp"
                    tools:text="@string/togglehere" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="@android:dimen/notification_large_icon_width"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:text="Email"
                    android:textStyle="bold|italic"
                    tools:text="@string/emailHere" />

                <CalendarView
                    android:id="@+id/calendarView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:selectedWeekBackgroundColor="@android:color/holo_purple"
                    android:weekNumberColor="@android:color/holo_blue_bright"
                    android:weekSeparatorLineColor="@color/colorAccent"
                    tools:layout_editor_absoluteY="48dp" />

                <RatingBar
                    android:id="@+id/ratingBar2"
                    style="@style/Widget.AppCompat.RatingBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="5" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@android:drawable/checkbox_on_background"
                    android:text="@string/checkbox"
                    tools:text="Check Here!" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
